--- a/IOS/PolyFeeds/PolyFeeds/Base.lproj/Main.storyboard
+++ b/IOS/PolyFeeds/PolyFeeds/Base.lproj/Main.storyboard
@@ -8,7 +8,7 @@
         <!--View Controller-->
         <scene sceneID="35g-I0-T4T">
             <objects>
-                <viewController id="Mly-67-MTp" sceneMemberID="viewController">
+                <viewController id="Mly-67-MTp" customClass="ViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="Xp3-Su-5sl"/>
                         <viewControllerLayoutGuide type="bottom" id="3HL-nC-Lkn"/>
@@ -18,38 +18,42 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="PolyFeeds" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bde-P1-ZeB">
-                                <rect key="frame" x="93" y="67" width="188" height="49"/>
+                                <rect key="frame" x="93" y="28" width="188" height="49"/>
                                 <animations/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="32"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yg6-2x-FY8">
-                                <rect key="frame" x="142" y="499" width="91" height="53"/>
-                                <animations/>
-                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                <state key="normal" title="Sign In"/>
-                                <connections>
-                                    <segue destination="vXZ-lx-hvc" kind="show" id="3kl-iS-iNb"/>
-                                </connections>
-                            </button>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="ID" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Dfl-jP-uDV">
-                                <rect key="frame" x="116" y="222" width="142" height="30"/>
+                                <rect key="frame" x="116" y="124" width="142" height="30"/>
                                 <animations/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="PassWord" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="o9u-e9-0a9">
-                                <rect key="frame" x="116" y="352" width="142" height="30"/>
+                                <rect key="frame" x="116" y="195" width="142" height="30"/>
                                 <animations/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                             </textField>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nAZ-ic-CSM">
+                                <rect key="frame" x="146" y="269" width="83" height="30"/>
+                                <animations/>
+                                <state key="normal" title="Sign In"/>
+                                <connections>
+                                    <action selector="PassButton:" destination="Mly-67-MTp" eventType="touchUpInside" id="3LE-XG-L73"/>
+                                    <segue destination="vXZ-lx-hvc" kind="modal" identifier="Button_SignIn" id="frd-s9-BJs"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                    <connections>
+                        <outlet property="IDField" destination="Dfl-jP-uDV" id="04O-3f-eSt"/>
+                        <outlet property="PassWordField" destination="o9u-e9-0a9" id="FbE-wX-qju"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="WYR-ho-8t9" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -192,7 +196,7 @@
             </objects>
             <point key="canvasLocation" x="949.5" y="780.5"/>
         </scene>
-        <!--View Controller-->
+        <!--Actualités-->
         <scene sceneID="zTe-Fb-AP1">
             <objects>
                 <viewController id="9I6-oR-cBZ" customClass="ViewController" sceneMemberID="viewController">
@@ -205,7 +209,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="1" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aao-so-oax">
-                                <rect key="frame" x="206" y="85" width="10" height="21"/>
+                                <rect key="frame" x="182" y="127" width="10" height="21"/>
                                 <animations/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
@@ -215,19 +219,75 @@
                         <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
-                    <navigationItem key="navigationItem" id="TtJ-8R-McS">
+                    <navigationItem key="navigationItem" title="Actualités" id="TtJ-8R-McS">
                         <barButtonItem key="leftBarButtonItem" image="Icon_ItemP.png" style="done" id="7aw-mO-lMk">
                             <color key="tintColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" title="Reglage" id="KEP-nM-Bew">
+                            <connections>
+                                <segue destination="XeD-O0-Swt" kind="show" id="sQS-3E-61Q"/>
+                            </connections>
                         </barButtonItem>
                     </navigationItem>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                     <connections>
+                        <outlet property="ReglageButton" destination="KEP-nM-Bew" id="k0o-jB-ZrE"/>
                         <outlet property="barButton" destination="7aw-mO-lMk" id="HKa-7X-8XX"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="C3G-Tg-Rnl" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1431.5" y="976.5"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="Fej-n7-4td">
+            <objects>
+                <viewController id="XeD-O0-Swt" customClass="ViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="26n-AA-vKw"/>
+                        <viewControllerLayoutGuide type="bottom" id="nnU-sL-tqL"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="iMw-cV-7th">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="hKX-to-rYu">
+                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                                <animations/>
+                                <items>
+                                    <navigationItem title="Reglage" id="fOf-QQ-cGl">
+                                        <barButtonItem key="backBarButtonItem" title="Back" id="VVI-RJ-Xxg"/>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9zh-nD-GUW">
+                                <rect key="frame" x="111" y="587" width="171" height="30"/>
+                                <animations/>
+                                <state key="normal" title="A propos"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OlV-bp-sZ1">
+                                <rect key="frame" x="111" y="531" width="171" height="30"/>
+                                <animations/>
+                                <state key="normal" title="Compte &amp; Connexions"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ve3-Ol-AlD">
+                                <rect key="frame" x="120" y="467" width="171" height="30"/>
+                                <animations/>
+                                <state key="normal" title="Evénement du calendrier"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hjH-6L-xZt">
+                                <rect key="frame" x="169" y="350" width="54" height="30"/>
+                                <animations/>
+                                <state key="normal" title="Général"/>
+                            </button>
+                        </subviews>
+                        <animations/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="K5W-Xg-BFg" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1921.5" y="976.5"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="Kfp-SP-phN">
